--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -6,33 +6,41 @@
      background-color: black;
      color: white;
      font-optical-sizing: auto;
-     font-weight: weight;
+     font-weight: 400;
      font-style: normal;
-     width: 1280px;
-     height:3569px;
 
  }
 
  .firstpage {
-     display: flex;
-     flex-direction: row;
-     width: 1280px;
-     height: 778px;
-     display: flex;
-     flex-wrap: nowrap;
-     justify-content: flex-start;
-     align-items: stretch;
-     align-content: start;
-}
-
-.svechi1_1 {
-    margin-top: 352px;
-    margin-left: 95px;
+    width:100%;
+    height: 22%;
+    display: flex;
+    flex-direction: row;
+    display: flex;
+    flex-wrap: nowrap;
     justify-content: flex-start;
+    align-items: stretch;
+    align-content: start;
 }
-.svechi1_2 {
-    margin-top: 205px;
-    margin-left: 95px;
+.svecha {
+    position:relative;
+    width: 223px;
+    height: 578px;
+    margin-top: 6%;
+    margin-left: 6%;
+}
+.svecha1 {
+    position: relative;
+    margin-top: 10%;
+    top: 6%;
+    left: 2%;
+}
+.svecha2 {
+    position: relative;
+    margin-top: 10%;
+    margin-left: 3%;
+    top: 6%;
+    left: 2%;
 }
 .mirror p {
     font-size: 100px;
