--- a/stylesheets/fonts.css
+++ b/stylesheets/fonts.css
@@ -4,3 +4,9 @@
     font-style: normal;
     font-weight: 400;
 }
+@font-face {
+    font-family: "Inter", sans-serif;
+    src: url(../fonts/Inter-VariableFont_opsz\,wght.ttf);
+    font-weight: 400px;
+    font-style: normal;
+}
