--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -15,37 +15,66 @@
     width:100%;
     height: 22%;
     display: flex;
-    flex-direction: row;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: stretch;
-    align-content: start;
+    justify-content:space-between;
+    align-items: end;
 }
+
 .svecha {
-    position:relative;
-    width: 223px;
-    height: 578px;
-    margin-top: 6%;
-    margin-left: 6%;
+    width: 17,42%;
+    height: 45,15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center ;
 }
-.svecha1 {
-    position: relative;
-    margin-top: 10%;
-    top: 6%;
-    left: 2%;
-}
-.svecha2 {
-    position: relative;
-    margin-top: 10%;
-    margin-left: 3%;
-    top: 6%;
-    left: 2%;
+
+.mirror {
+    width: 49%;
+    height: 59%;
+    background-image: url("images/mirror.svg");
+    background-size: cover;
+    display: flex;
+    justify-content: center;
 }
 .mirror p {
     font-size: 100px;
     text-align: center;
     font-family: "Alconica";
-    color:CC0000;
+    color: crimson;
 }
+.secondpage {
+    margin-top: 2%;
+    display: flex;
+    width: 100%;
+    height: 35%;
+    justify-content: center;
+    align-items: center;
 
+}
+.vbox {
+    width: 96%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+}
+.pictures {
+    width:95%;
+    height:34%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    align-content: space-between;
+    position: absolute;
+    z-index: 2;
+}
+.text {
+    margin-top: 2%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    font-size: 110px;
+    font-family: "Inter";
+    text-align: center;
+}
