--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -1,6 +1,6 @@
 .sidebar {
-    min-height: 50vh;
-
+  min-height: 50vh;
 }
 
-@media screen and (max-width:1920) {}
+@media screen and (max-width: 1920) {
+}
