--- a/stylesheets/fonts.css
+++ b/stylesheets/fonts.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: "Alconica";
-    src: url(../fonts/Aclonica-Regular.ttf);
-    font-style: normal;
-    font-weight: 400;
+  font-family: "Alconica";
+  src: url(../fonts/Aclonica-Regular.ttf);
+  font-style: normal;
+  font-weight: 400;
 }
 @font-face {
-    font-family: "Inter", sans-serif;
-    src: url(../fonts/Inter-VariableFont_opsz\,wght.ttf);
-    font-weight: 400px;
-    font-style: normal;
+  font-family: "Inter", sans-serif;
+  src: url(../fonts/Inter-VariableFont_opsz\wght.ttf);
+  font-weight: 400px;
+  font-style: normal;
 }
